--- a/style.css
+++ b/style.css
@@ -12,6 +12,16 @@ body {
   overflow: hidden;
 }
 
+.scene-1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  animation: scene 4.5s alternate forwards;
+}
 
 .scene-2 {
   min-height: 100vh;
